monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4001/A4001.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4001;

grammar A4001 extends de.monticore.common.TestTypes {

  QualifiedName extends Name;

}
